<resources>
    <string name="app_name_pro">Chanda Pro</string>
    <string name="app_name_regular">Chanda</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_payment">Edit Payment</string>
    <string name="title_activity_schedule_list">Schedules</string>
    <string name="title_activity_schedule">Edit Schedule</string>
    <string name="title_activity_main_pro">Chanda Pro</string>
    <string name="title_activity_main_regular">Chanda Payments</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="receipt_number_hint">receipt number </string>
    <string name="tahrik_jadid_hint">Tahrik jadid</string>
    <string name="payer_title_hint">title</string>
    <string name="waqf_jadid_hint">Waqf Jadid</string>
    <string name="chanda_am_hint">chanda am</string>
    <string name="wasiyyat_hint">wasiyyat</string>
    <string name="nav_share_message">share</string>
    <string name="nav_send_message">Send to chanda portal</string>
    <string name="text_total_schedules_for_month">No of Schedules: </string>
    <string name="text_no_of_payers">No of Payers: </string>
    <string name="text_total_amount_for_schedule">Total Amount: %.2f </string>
    <string name="text_receipt_number">Receipt No</string>
    <string name="text_receipt_number_string">Receipt No: %s</string>
    <string name="text_amount_paid">Paid: %.2f</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Your name</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>

    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_title_email_address">Email Address</string>

    <string name="pref_default_email_address">youremail@hostname.com</string>

    <!-- Example settings for Notifications -->
    <string name="pref_title_jamaat_list">My Jamaat</string>

    <string name="pref_default_jamaat_list"></string>

    <string name="jalsa_salana_hint">Jalsa Salana</string>
    <string name="welfare_fund_hint">welfare fund</string>

    <string name="scholarship_fund_hint">Scholarship fund</string>


    <string name="maryam_fund_hint">Maryam fund</string>
    <string name="tabligh_fund_hint">Tabligh fund</string>
    <string name="zakat_hint">Zakat</string>
    <string name="sadakat_hint">Sadakat</string>
    <string name="fitrana_hint">Fitrana</string>
    <string name="mosque_fund_hint">Mosque Donation</string>
    <string name="mta_fund_hint">Mta</string>
    <string name="centinary_hint">Centinary khilafat</string>
    <string name="wasiyyat_hissan_jaidad_hint">WasiyatHisan Jaida</string>
    <string name="miscellaneous_hint">Miscellaneous</string>
    <string name="schedule_title_hint">Schedule Title</string>
    <string name="jamaat_name_hint">Jamaat Name</string>
    <string name="menu_edit_item">Edit</string>
    <string name="selected_item_count"> selected</string>
    <string name="runtime_permissions_read_storage">
        Chanda App needs storage access permissions to update members list/info</string>
    <string name="runtime_permissions_write_storage">
        Chanda App needs storage access permissions to export your schedule</string>
    <string name="jamaat_name_warning">Please, provide Jamaat Name to update members info</string>
    <string name="first_time_user_message">Welcome! This app is intended for Jamaat Fin. Secretary ONLY
        for easy compilation of monthly payment records.  Make sure to set your preferences in the settings
         screen for tailored usage of the app.</string>
    <string name="welcome_title_message">Welcome</string>
    <string name="warning_title_firstusage">Set your preferences</string>
    <string name="warning_message_jamaat_not_set">You have to set your membership ID and Jamaat before using the app</string>
    <string name="enable_mutiple_jamaat">Enable Multiple Jamaat</string>
    <string name="add_jamaat_not_enabled">You are not allowed to add new jamaat</string>
    <string name="Jamaat_Multi_selection">Add Jamaat(s)</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value">
    </string-array>
    <string name="message_warning_update_jamaat">Are you sure you want to update list for %s</string>
    <string name="loading_message">please wait ...</string>
    <string name="pref_member_id">Member ID</string>
    <string name="jamaat_input_type_help">Hint: use underscore ( _ ) for spaces or hyphen</string>
    <string name="for_all">Payment month(s)</string>
    <string name="add_invoice_no">Enter invoice number</string>
    <string name="nav_members_list">Members List</string>
    <string name="add_a_member">Add a New Member</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string-array name="pref_entries_jamaat_list">
        <item>Agbokojo</item>
        <item>Anfani</item>
        <item>Asaka</item>
        <item>Asipa</item>
        <item>Ehin Grammar</item>
        <item>Felele</item>
        <item>Imalenfalafia</item>
        <item>Kewulere</item>
        <item>Kobomoje</item>
        <item>Liberty</item>
        <item>Odo-Oba</item>
        <item>Odo-Ona Elewe</item>
        <item>Oke-Ado</item>
        <item>Oke-Oluokun</item>
        <item>Oke-Seni</item>
    </string-array>
    <string-array name="pref_values_jamaat_list">
        <item>agbokojo</item>
        <item>anfani</item>
        <item>asaka</item>
        <item>asipa</item>
        <item>ehin_grammar</item>
        <item>felele</item>
        <item>imalenfalafia</item>
        <item>kewulere</item>
        <item>kobomoje</item>
        <item>liberty</item>
        <item>odo_oba</item>
        <item>odo_ona_elewe</item>
        <item>oke_ado</item>
        <item>oke_oluokun</item>
        <item>oke_seni</item>
    </string-array>

</resources>
